# genai-prod-kit

./: .gitignore  LICENSE  README.md  eval_runs.jsonl  pyproject.toml
.github/workflows/: eval-gate.yml  pii-gate.yml
examples/toy_feature/: run.py  run_eval.py
notebooks/: 01_prototype_to_production_30min.ipynb  02_cost_and_token_observability.ipynb  03_eval_driven_development.ipynb  04_prompt_versioning.ipynb  05_pii_redaction.ipynb  06_drift_monitoring.ipynb  07_switch_gemini_openai.ipynb
src/genai_prod_kit/: gateway.py  pricing.py
src/genai_prod_kit/drift/: config.py  monitor.py  statistics.py
src/genai_prod_kit/evals/: gate.py  runner.py
src/genai_prod_kit/evals/golden/: toy_sentiment.jsonl
src/genai_prod_kit/pii/: detector.py  pipeline.py  redactor.py  restorer.py  types.py
src/genai_prod_kit/prompts/: registry.py
src/genai_prod_kit/prompts/toy_sentiment/: v1.txt
src/genai_prod_kit/prompts/toy_summary/: v1.txt
src/genai_prod_kit/providers/: gemini.py  openai.py
src/genai_prod_kit/sinks/: jsonl.py
tests/: test_drift.py  test_gate.py  test_pricing.py
